--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "got": "^12.6.0",
     "mongoose": "^7.0.1",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^2.6.6",
     "request": "^2.88.2"
   }
 }
