--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "mongoose": "^7.0.1",
     "node-fetch": "^2.6.6",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
